[metadata]
name = mackbc
version = 0.1.0
description = More macOS Keyboard Control
long_description = file:README.rst
long_description_content_type = text/x-markdown
keywords =
    macOS keyboard shortcut mouse
url = https://github.com/subbyte/mackbc
license = Apache 2.0 License

[options]
packages = find:
package_dir =
    =src
scripts = bin/mackbc
python_requires = >= 3.7
install_requires =
    falcon
    PyObjC
    pyautogui
tests_require =
    pytest

[options.packages.find]
where = src

[options.package_data]
* = *.yaml
